add upload image

--- a/blog/static/blog/css/index.css
+++ b/blog/static/blog/css/index.css
@@ -180,6 +180,16 @@ i {
     margin-bottom: 30px;
 }
 
+.hiddenThree {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    max-height: 72px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-overflow: -o-ellipsis-lastline;
+}
+
 .hiddenFour {
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -221,7 +231,7 @@ i {
     width: 300px;
     height: 156px;
     margin-bottom: 50px;
-    padding: 20px 0 0;
+    padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.08) 1px 3px 3px;
     border-radius: 3px;
 }
