--- a/blog/templates/blog/comic.html
+++ b/blog/templates/blog/comic.html
@@ -76,7 +76,7 @@
 		    </div>
             <div class="story-list">
                 <div class="story-list-border">
-                    <p class="other color-other">其他</p>
+                    <p class="other color-other">全部</p>
                     <div class="list">
                         {% for comic in comic_list %}
                             <div class="ft14 lh24">
