--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -73,7 +73,7 @@
 		    </div>
             <div class="story-list">
                 <div class="story-list-border">
-                    <p class="other color-other">其他</p>
+                    <p class="other color-other">全部</p>
                     <div class="list">
                         {% for post in post_list %}
                             <div class="ft14 lh24">
