--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -49,13 +49,11 @@
         <div class="second">
             <div class="container1">
                 <div class="module">
-                    <div class="module-same module-fable">
+                    <div class="module-same-fable module-fable">
                         <div class="container">
                             <p class="title">
                                 <span class="title-icon icon-new-l"></span>
-                                <span>寓言</span>
-                                <!-- <i class="fa fa-bell" aria-hidden="true"></i> -->
-                                <span>故事</span>
+                                <span>寓言故事</span>
                                 <span class="title-icon icon-new-r"></span>
                             </p>
                             <ul class="dis-flex flex-between fable-text">
@@ -109,8 +107,7 @@
                         <div class="container">
                             <p class="title">
                                 <span class="title-icon icon-new-l3"></span>
-                                <span>诗词</span>
-                                <span>欣赏</span>
+                                <span>诗词欣赏</span>
                                 <span class="title-icon icon-new-r3"></span>
                             </p>
                             <ul class="poem-text dis-flex flex-between">
