--- a/blog/static/blog/css/index.css
+++ b/blog/static/blog/css/index.css
@@ -150,11 +150,14 @@ i {
 
 .module-same {
     padding: 50px 0 50px;
-    /*padding-bottom: 100px;*/
     box-shadow: 0 2px 8px 0 rgba(7,17,27,.06);
-    /*background-color: #fff;*/
     background: #FAFAFA;
-   /* background: #f5f3ef;*/
+}
+
+.module-same-fable {
+    padding: 100px 0 50px;
+    box-shadow: 0 2px 8px 0 rgba(7,17,27,.06);
+    background: #FAFAFA;
 }
 
 .module-same-bg  {
