--- a/blog/static/blog/css/detail.css
+++ b/blog/static/blog/css/detail.css
@@ -23,7 +23,8 @@ p, li {
 
 .story {
     /*margin: 0 auto;*/
-    padding: 25px;
+    min-height: 700px;
+    padding: 25px 50px 50px;
     background-color: #f2f2f2;
     border: 1px solid #dbe3e7;
     border-radius: 3px;
